feat: log request/response in mysql